# punchr

./: CMakeLists.txt  README.md
include/: timeSheetElements.hpp  timeSheetPersistency.hpp  timesheet.h  timesheet.hpp
src/: punchr.cpp  timeSheetPersistency.cpp  timesheet.cpp
